中英文切换

--- a/src/sass/generator.scss
+++ b/src/sass/generator.scss
@@ -357,6 +357,7 @@ body {
 }
 .setting-menu{
     cursor: pointer;
+    padding: 8px 5px;
 }
 .setting-menu:hover{
     color: $theme-primary-color;
