--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -12,6 +12,7 @@
   position: fixed
   top: 0
   z-index: 1000
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,.1)
   .social-nav
     margin-right: 25px
   .ui.login-btn,.ui.register-btn
