--- a/src/sass/trade.sass
+++ b/src/sass/trade.sass
@@ -22,7 +22,7 @@
   padding: 7.5px
   color: $font-color
 .market-k-chart
-  height: 370px
+  height: 450px
   margin-top: 15px
 .trade-box
   height: 370px
@@ -254,5 +254,19 @@
   background-color: #fff;
   border: 1px solid $theme-primary-color;
   color: $theme-primary-color;
+
+.fake-trade-menu
+  &.ui.menu
+    background-color: #82abba
+    border-radius: 0
+    box-shadow: none;
+    border: none;
+    >.item
+      color: #fff;
+      padding: 5px 8px;
+      &:first-child
+        border-radius: 0;
+        font-size: 18px;
+        color: $red-color;
 
 
