--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -1,7 +1,7 @@
 $full-bg-color: #f5f5f5
 $block-bg-color: #ffffff
 $font-color: #373e40
-$theme-primary-color: #00b38c
+$theme-primary-color: #254d87
 $theme-primary-color-light: #ecf5ff
 
 $theme-default-color: #c0c1c2
@@ -15,4 +15,41 @@ $font-gray-color: #a9a9a9
 
 $theme-font-color: #00b0f0;
 
+$form-label-color: #82abba;
+
 $font: FDCfont,"Microsoft YaHei",Arial,sans-serif;
+
+/* 关于modal的变量 */
+$zindex-modal:             1050 !default;
+$font-size-base:          14px !default;
+$modal-content-bg:                             #fff !default;
+$modal-content-fallback-border-color:          #999 !default;
+$modal-content-border-color:                   rgba(0,0,0,.2) !default;
+$border-radius-large:       6px !default;
+$zindex-modal-background:  1040 !default;
+$modal-backdrop-bg:           #000 !default;
+$modal-backdrop-opacity:      .5 !default;
+$modal-title-padding:         15px !default;
+$modal-header-border-color:   #e5e5e5 !default;
+$line-height-base:        1.428571429 !default; // 20/14
+$modal-title-line-height:     $line-height-base !default;
+$modal-inner-padding:         15px !default;
+$modal-footer-border-color:   $modal-header-border-color !default;
+$screen-sm:                  768px !default;
+$modal-md:                    600px !default;
+$modal-sm:                    300px !default;
+$screen-md:                  992px !default;
+$screen-md-min:              $screen-md !default;
+$modal-lg:                    900px !default;
+$screen-sm-min:              $screen-sm !default;
+//== Close
+//
+//##
+
+$close-font-weight:           bold !default;
+$close-color:                 #000 !default;
+$close-text-shadow:           0 1px 0 #fff !default;
+
+
+
+
