--- a/src/sass/finance.sass
+++ b/src/sass/finance.sass
@@ -2,7 +2,51 @@
   border-bottom: 1px solid rgba(130,171, 186, .3)
   padding: 15px 20px 20px 20px
   color: #82abba
-  div
+  >div
     display: inline-block
 .finance-body
   min-height: calc(100vh - 380px)
+.action-box
+  font-size: 12px;
+.withdraw-address-btn
+  float: right;
+  margin-right: 20px;
+  font-size: 16px;
+.finance-filter
+  padding: 0 15px;
+  .ui.button
+    background: $theme-primary-color;
+    color: #fff;
+    padding: 6px 13px;
+  .date-wrapper
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
+    input
+      margin: 0;
+      max-width: 100%;
+      -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+      flex: 1 0 auto;
+      outline: 0;
+      -webkit-tap-highlight-color: rgba(255,255,255,0);
+      text-align: left;
+      line-height: 30px;
+      height: 30px;
+      font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+      background: #fff;
+      border: 1px solid rgba(34,36,38,.15);
+      color: rgba(0,0,0,.87);
+      border-radius: .28571429rem;
+      -webkit-transition: border-color .1s ease,-webkit-box-shadow .1s ease;
+      transition: border-color .1s ease,-webkit-box-shadow .1s ease;
+      transition: box-shadow .1s ease,border-color .1s ease;
+      transition: box-shadow .1s ease,border-color .1s ease,-webkit-box-shadow .1s ease;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      border-color: $form-label-color;
+      background: #fff;
+      color: rgba(0,0,0,.8);
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      padding-left: 10px;
