--- a/src/sass/footer.sass
+++ b/src/sass/footer.sass
@@ -1,7 +1,7 @@
 .footer
-  height: 291px
-  background-color: #696969
-  color: #fff
+  height: 44px
+  background-color: #3d464c
+  color: #999
   position: relative
 
 
@@ -34,7 +34,7 @@
   width: 100vw
   text-indent: 40px
   font-size: 12px
-  color: #fff
+  color: #999
   text-align: center
 
 
