--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,10 @@
 @import 'vars'
+@import 'vendor-prefixes'
 
 @import 'common/radio-button'
 @import 'common/radio-group'
+@import 'common/_modals.scss'
+@import 'common/_close'
 @import 'body'
 @import 'home'
 @import 'charge'
@@ -14,3 +17,4 @@
 @import 'footer'
 @import 'balances-table'
 @import 'generator.scss'
+@import 'notification'
