--- a/src/sass/transaction.sass
+++ b/src/sass/transaction.sass
@@ -2,6 +2,10 @@
   font-size: 12px;
 .action-btn
   cursor: pointer;
+.border-btn
+  border: 1px solid $theme-primary-color;
+  padding: 3px 5px;
+  border-radius: 3px;
 .flex-wrapper .ui.text.menu .active.item
   background-color: $theme-primary-color;
   color: #fff;
