--- a/src/sass/balances-table.sass
+++ b/src/sass/balances-table.sass
@@ -7,10 +7,10 @@
     >dt,>dd
       float: left;
       font-size: 12px;
-      height: 40px;
-      line-height: 40px;
-      text-align: right;
-      width: 25%;
+      height: 32px;
+      line-height: 32px;
+      text-align: left;
+      width: 20%;
       white-space: nowrap;
       text-overflow: ellipsis;
 .cf-table
@@ -24,8 +24,8 @@
       width: auto;
       display: inline-block;
       padding: 0 5px;
-      height: 40px;
-      line-height: 40px;
+      height: 32px;
+      line-height: 32px;
       font-size: 12px;
       background-color: transparent;
 .action-box
@@ -71,3 +71,32 @@
       color: #7a98f7;
       transition: all .2s ease-in-out;
       cursor: pointer;
+.table-form-lbl
+  color: $form-label-color
+  height: 22px;
+  display: inline-block;
+.withdraw-input
+  width: 100%;
+  height: 48px;
+.form-group-container2
+  padding-top: 20px;
+.form-group-container
+  display: table;
+  width: 100%;
+  .form-group
+    margin-bottom: 20px;
+    display: table-cell;
+  .form-fee
+    width: 50%;
+    padding: 0 20px 0 0;
+.action-content
+  margin-top: 20px;
+  width: 100%;
+  display: table;
+.withdraw-btn
+  height: 48px;
+  width: 200px;
+.action-foot
+  display: table-cell;
+  width: 200px;
+  text-align: right;
