--- a/src/sass/generator.scss
+++ b/src/sass/generator.scss
@@ -331,7 +331,7 @@ body {
 }
 
 .cf-content,.exchange-wrapper {
-    min-height: calc(100vh - 250px)
+    min-height: calc(100vh - 94px)
 }
 
 #body {
@@ -621,4 +621,10 @@ body {
 .exchange-wrapper .login-bar {
     color: #74594C;
     margin-bottom: 10px
+}
+
+.guide-btns{
+  width: 330px;
+  height: 50px;
+  line-height: 50px;
 }
