--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -2,8 +2,8 @@
   background-color: $theme-primary-color
   width: 100%;
   display: flex;
-  flex-direction: column
-  color: #fff
+  flex-direction: column;
+  color: $theme-primary-color;
   align-items: center
   padding: 50px 0
   p
@@ -32,10 +32,52 @@
 .color-down
   color: $red-color
 .primary-color
-  color: $theme-font-color;
+  color: $theme-primary-color;
 .item-8
   width: 12.5%
 .item-4
   width: 25%
 .item-5
   width: 20%
+.total-title
+  line-height: 1;
+  white-space: nowrap;
+  vertical-align: middle;
+  background: #fff;
+  border: 1px solid #dcdfe6;
+  font-weight: 500;
+  border-left: 0;
+  color: #606266;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  -webkit-transition: all .3s cubic-bezier(.645,.045,.355,1);
+  transition: all .3s cubic-bezier(.645,.045,.355,1);
+  padding: 12px 20px;
+  font-size: 14px;
+  border-radius: 0;
+  border: 1px solid #dcdfe6;
+  padding: 8px;
+  border-left: 1px solid #dcdfe6;
+  border-radius: 4px;
+  -webkit-box-shadow: none!important;
+  box-shadow: none!important;
+.table-title
+  text-align: left;
+  font-size: 24px;
+  font-weight: 500;
+  color: rgba(0,0,0,.85);
+  height: 40px;
+  width: 100%;
+  border-bottom: 1px solid #e9e9e9;
+.chart-wrapper
+  border: 1px solid #e9e9e9;
+  width: 100%;
+.coin-name
+  li
+    width: 120px;
+    padding: 15px 0;
+    text-align: center;
+    &:hover
+      background-color: #f1f5ff;
