--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -1,8 +1,10 @@
 $full-bg-color: #f5f5f5
 $block-bg-color: #ffffff
 $font-color: #373e40
-$theme-primary-color: #254d87
+$theme-primary-color: #0d1319
 $theme-primary-color-light: #ecf5ff
+
+$theme-color-2: #f4911a
 
 $theme-default-color: #c0c1c2
 
