--- a/src/sass/market.sass
+++ b/src/sass/market.sass
@@ -35,3 +35,24 @@
           border-radius: 0
 .ui.primary .button.action-btn
   background-color: $theme-primary-color
+.ui.dropdown>.text
+  color: $theme-primary-color;
+.attr-tag
+  display: inline-block;
+  padding: 2px 5px;
+  border: 1px solid #f4911a;
+  color: #f4911a;
+  font-size: 12px;
+  margin: 5px;
+  border-radius: 10px;
+#mainContainer
+  .ui.primary.button
+    background-color: #0d1319;
+    color: #f4911a;
+.unavailable-btn
+  border: 1px solid #ddd;
+  color: #bbb;
+  font-size: 12px;
+  padding: 4px 8px;
+  border-radius: 12px;
+  display: inline-block;
