--- a/src/sass/transaction.sass
+++ b/src/sass/transaction.sass
@@ -3,9 +3,10 @@
 .action-btn
   cursor: pointer;
 .border-btn
-  border: 1px solid $theme-primary-color;
+  border: 1px solid $theme-color-2;
   padding: 3px 5px;
   border-radius: 3px;
+  color: $theme-color-2;
 .flex-wrapper .ui.text.menu .active.item
   background-color: $theme-primary-color;
   color: #fff;
