--- a/src/sass/generator.scss
+++ b/src/sass/generator.scss
@@ -335,7 +335,13 @@ body {
 }
 
 #body {
-    padding-top: 50px
+    padding-top: 50px;
+    font-family: "Chinese Quote",-apple-system,BlinkMacSystemFont,"Segoe UI","PingFang SC","Hiragino Sans GB","Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 14px;
+    font-variant: tabular-nums;
+    line-height: 1.5;
+    color: rgba(0,0,0,.65);
+    background-color: #fff;
 }
 
 #body a {
