--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,5 +1,4 @@
 .fl-block
-  background-color: $theme-primary-color
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -13,7 +12,6 @@
     font-size: 24px
 .reverse-fl-block
   color: $font-color
-  background-color: #fff
 .ui.button.default-btn
   background-color: #fff;
   color: $theme-primary-color;
@@ -32,7 +30,7 @@
 .color-down
   color: $red-color
 .primary-color
-  color: $theme-primary-color;
+  color: $theme-color-2;
 .item-8
   width: 12.5%
 .item-4
@@ -66,11 +64,11 @@
 .table-title
   text-align: left;
   font-size: 24px;
-  font-weight: 500;
-  color: rgba(0,0,0,.85);
-  height: 40px;
+  color: #000;
   width: 100%;
+  font-weight: 400px;
   border-bottom: 1px solid #e9e9e9;
+  padding-bottom: 20px;
 .chart-wrapper
   border: 1px solid #e9e9e9;
   width: 100%;
@@ -79,5 +77,27 @@
     width: 120px;
     padding: 15px 0;
     text-align: center;
+    &:hover
+      background-color: #f1f5ff;
+.coin-market-wrapper
+  background: rgba(2,15,39,.5);
+  position: absolute;
+  bottom: 0;
+  .item
+    padding: 10px 0;
+.simple-table.ui.table
+  border-bottom: 1px solid #e9e9e9 !important;
+  thead th
+    border-bottom: none;
+    color: rgba(0,0,0,.43);
+    font-size: 12px;
+    height: 24px;
+    line-height: 24px;
+    .active
+      color: #f4911a;
+  tbody td
+    height: 53px;
+    font-size: 14px;
+  tbody tr
     &:hover
       background-color: #f1f5ff;
