--- a/src/sass/trade.sass
+++ b/src/sass/trade.sass
@@ -31,7 +31,6 @@
   color: $font-color
 .market-k-chart
   margin-top: 10px
-  background-color: #000;
 .trade-box
   margin-top: 10px
   .ui.basic.label
@@ -49,10 +48,15 @@
   .ui.secondary.pointing.menu
     border-bottom: 1px solid #eee
     .active.item
-      color: $theme-primary-color
-      border-color: $theme-primary-color
+      color: $theme-color-2
+      border-color: $theme-color-2
       font-weight: inherit
       border-bottom-width: 2px;
+      &:hover
+        color: $theme-color-2
+        border-color: $theme-color-2
+        font-weight: inherit
+        border-bottom-width: 2px;
 .user-order-box
   height: 200px
   margin-top: 15px
@@ -114,6 +118,7 @@
         border-left: 2px solid $theme-primary-color;
       span
         color: $theme-primary-color!important;
+        font-size: 14px;
   tr:first-child td, tr:first-child th
     /* padding-left: 10px */
 .no-border-table.ui[class*="very basic"].table:not(.sortable):not(.striped) thead tr:first-child th
@@ -201,8 +206,7 @@
 .line-guide-wrapper
   font-size: 12px;
   height: 29px;
-  background: #232323;
-  border-bottom: 1px solid #404040;
+  border-bottom: 1px solid #ebedf0;
   ul
     padding-left: 5px;
     padding-right: 11px;
@@ -359,7 +363,7 @@
 .no-login-tips
   text-align: center;
   p
-    color: $theme-primary-color;
+    color: #0d1319;
   .ui.login-btn,.ui.register-btn
     font-family: Nexa-Book;
     border-radius: 18px;
@@ -368,10 +372,11 @@
     margin-right: 10px
   .ui.login-btn
     border: 1px solid #fff;
-    background-color: $theme-primary-color
+    background-color: #0d1319;
+    color: #f4911a;
   .ui.register-btn
     background-color: $theme-default-color;
-    color: $font-color;
+    color: #fff;
     border: 1px solid #fff
 .msg-type
   font-weight: bold;
@@ -539,10 +544,13 @@
         position: relative;
         line-height: 20px;
         cursor: pointer;
-        .amount
+        /* .amount
           position: absolute;
           top: 0;
-          right: 10px;
+          right: 10px; */
+        .quene-index,.amount,.price
+          width: 33.3%;
+          display: inline-block;
 
   .ceil-block
     position: relative;
@@ -560,7 +568,7 @@
   background-color:rgba(0,0,0,.43)
   border-radius: 0;
 .ceil-box::-webkit-scrollbar-track
-  background-color: #f8f8f8;
+  background-color: #fff;
 .full-deal-list-box
   overflow: hidden;
   height: 100%;
@@ -660,13 +668,11 @@
     display: block;
     overflow: hidden;
     li
-      width: 20%;
-      margin: 1px 0 3px;
       display: block;
       overflow: hidden;
-      height: 22px;
       line-height: 22px;
-      cursor: position
+      cursor: position;
+      padding: 10px;
 .action-btn, .boat
   cursor: pointer;
 .boat
@@ -682,7 +688,7 @@
     li
       &:hover
         span
-        color: #B10000
+          color: #f4911a
 
 .attrValues
   ul
@@ -700,10 +706,10 @@
   display: none
 
 .attrValues ul li.active span
-  color: #B10000
+  color: #f4911a
 
 .attrValues ul li.active span i.icon
-  color: #B10000;
+  color: #f4911a;
   display: inline-block
 .attrValues, .attrValues ul li, .boat, .l, .line-guide-wrapper ul li
   float: left;
@@ -721,7 +727,7 @@
      font-weight: 400;
      margin-bottom: 10px;
   .ceil-box
-    height: 310px;
+    height: 210px;
     overflow: auto;
   .ceil-block
     position: relative;
@@ -748,15 +754,33 @@
     position: absolute;
     right: 0;
     left: 24px;
-.attr-btn.ui.button
+.attr-btn.ui.button.basic
   margin-bottom: 10px;
   margin-left: 5px;
+  &.active
+    background: 0 0!important;
+    -webkit-box-shadow: 0 0 0 1px #f4911a inset!important;
+    box-shadow: 0 0 0 1px #f4911a inset!important;
+    color: #f4911a!important;
 i.icon.item-check
   position: absolute;
   right: 10px;
   display: none;
 .chosen-cate
   padding: 10px;
+.token-property
+  li
+    float: left;
+    padding: 5px 20px 5px 0;
+    width: 50%
+  &:after
+   display: block;
+   clear: both;
+   height: 0;
+   content: ' ';
+.search-wrap
+  .ui.input>input
+    border-radius: 5px 5px 0px 0px;
 
 
 
